# JaguarLandRoverDiagnostic

./: .gitignore  CLAUDE.md  FW93-19C204-AJ.vbf  FW93-19C206-AC.vbf  JPLA-19C204-AA.vbf  LK72-19C204-AA.vbf  LX73-19C204-AA.vbf  MX53-19C204-AA.vbf  SUCCESS_603E.md  bcm_ccf_raw.json  bcm_dump.json  can_dump_ign_onoff.txt  can_dump_ignition.txt  can_dump_with_sdd.txt  can_full_dump.txt  ccf_compare.json  ccf_decode_table.json  exml_decrypt.py  gwm_ccf_raw.json  gwm_dump.json  imc_ccf_dump.json  index.html  ipc_dump.json  package-lock.json  package.json  parse_ccf.py  tailwind.config.ts  tsconfig.json
JPLA-19C204-XA/: teseo-gnss-fw-imc-3.2-7007.i586.rpm
JPLA-19C204-XA/opt/jlr/etc/teseo/: teseo_partnum.xml
src/: App.test.tsx  App.tsx  capabilities.test.ts  test-setup.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: ccf_decode.json
src-tauri/capabilities/: default.json
src-tauri/src/: bcm_emulator.rs  commands.rs  ecu_emulator.rs  lib.rs  main.rs  state.rs
src-tauri/src/j2534/: device.rs  dll.rs  mock.rs  mod.rs  types.rs
src-tauri/src/uds/: client.rs  error.rs  keygen.rs  mod.rs  services.rs
src/components/: BcmPanel.tsx  ConnectPanel.test.tsx  ConnectPanel.tsx  EcuInfoSection.test.tsx  EcuInfoSection.tsx  GwmPanel.tsx  ImcPanel.tsx  IpcPanel.tsx  LogConsole.test.tsx  LogConsole.tsx  RoutinesPanel.test.tsx  RoutinesPanel.tsx  Sidebar.tsx  SshPanel.test.tsx  SshPanel.tsx  VehicleInfo.test.tsx  VehicleInfo.tsx
src/lib/: tauri.ts
src/styles/: globals.css
(+3 files in other folders)
