[package]
name = "udsapp"
version = "0.1.0"
description = "JLR UDS Diagnostic Tool"
authors = ["andrei"]
edition = "2021"

[lib]
name = "udsapp_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "udsapp"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
